Got it going on

--- a/app/views/access/_nav.html.erb
+++ b/app/views/access/_nav.html.erb
@@ -1,6 +1,6 @@
 <!-- Fixed navbar -->
     <% if @current_user %>
-      <div class="navbar navbar-default">
+      <div class="navbar navbar-default" style="background: black; border-radius: 0px;">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
