--- a/app/assets/stylesheets/access.css.scss
+++ b/app/assets/stylesheets/access.css.scss
@@ -268,6 +268,27 @@ a:after {
 /*  ################################################################
   6. Others (add here)
 ################################################################# */
+.travelSearch {
+  height: 200px;
+}
+
+.searchBar {
+  float: left;
+  margin-right: 30px;
+}
+.origin input {
+  height: 40px;
+  width: 173px;
+}
+.destination input {
+  height: 40px;
+  width: 173px;
+}
+
+.endYo {
+  clear: both;
+  padding: 15px 0;
+}
 
 .slider.slider-horizontal {
   margin-right: 10px;
@@ -278,7 +299,55 @@ a:after {
 }
 
 .btn-lg {
-  padding: 10px 59px;
   background: #F39C12;
   color: white;
 }
+
+#map-canvas {
+        height: 500px;
+        margin: 0px;
+        padding: 0px;
+        display: none;
+      }
+     /* #panel {
+        position: absolute;
+        top: 5px;
+        left: 50%;
+        margin-left: -180px;
+        z-index: 5;
+        background-color: #fff;
+        padding: 5px;
+        border: 1px solid #999;
+      }*/
+      #directions-panel {
+        height: 500px;
+        float: right;
+        width: 390px;
+        overflow: auto;
+      }
+
+      #map-canvas {
+        margin-right: 400px;
+      }
+
+      #control {
+        background: #fff;
+        padding: 5px;
+        font-size: 14px;
+        font-family: Arial;
+        border: 1px solid #ccc;
+        box-shadow: 0 2px 2px rgba(33, 33, 33, 0.4);
+        display: none;
+      }
+
+      @media print {
+        #map-canvas {
+          height: 500px;
+          margin: 0;
+        }
+
+        #directions-panel {
+          float: none;
+          width: auto;
+        }
+      }
