added comments more organized

--- a/app/views/access/index.html.erb
+++ b/app/views/access/index.html.erb
@@ -5,6 +5,8 @@
   }
 </style>
 
+<!-- THIS IS THE FORM A.K.A (THE PARTY)-->
+
 <div class="mainPage" >
   <div class="container">
     <h1>Get this Party Started!</h1>
@@ -50,6 +52,7 @@
   </div>
 </div>
 
+<!--AND THIS IS MY MAP -->
 <div class="map" style="background-color: #f9f9f9">
   <div id="directions-panel"></div>
   <div id="map-canvas"></div>
@@ -57,6 +60,9 @@
 
 <br>
 
+
+
+<!-- NEXT STUFF I NEED TO ADD -->
 <div class="secondary">
   <div class="container">
     <h1>This is the next portion!</h1>
