--- a/app/assets/stylesheets/access.css.scss
+++ b/app/assets/stylesheets/access.css.scss
@@ -266,7 +266,7 @@ a:after {
 
 
 /*  ################################################################
-  6. Others (add here)
+  6. THE TRAVEL SEARCH BAR
 ################################################################# */
 .travelSearch {
   height: 200px;
@@ -303,51 +303,63 @@ a:after {
   color: white;
 }
 
+
+
+
+/*  ################################################################
+  7. THE STUPID MAP I HATE THIS
+################################################################# */
+
 #map-canvas {
-        height: 500px;
-        margin: 0px;
-        padding: 0px;
-        display: none;
-      }
-     /* #panel {
-        position: absolute;
-        top: 5px;
-        left: 50%;
-        margin-left: -180px;
-        z-index: 5;
-        background-color: #fff;
-        padding: 5px;
-        border: 1px solid #999;
-      }*/
-      #directions-panel {
-        height: 500px;
-        float: right;
-        width: 390px;
-        overflow: auto;
-      }
+  height: 500px;
+  margin: 0px;
+  padding: 0px;
+  display: none;
+ }
+  /* #panel {
+  position: absolute;
+  top: 5px;
+  left: 50%;
+  margin-left: -180px;
+  z-index: 5;
+  background-color: #fff;
+  padding: 5px;
+  border: 1px solid #999;
+  }*/
+#directions-panel {
+  height: 500px;
+  float: right;
+  width: 390px;
+  overflow: auto;
+}
 
-      #map-canvas {
-        margin-right: 400px;
-      }
+#map-canvas {
+  margin-right: 400px;
+}
 
-      #control {
-        background: #fff;
-        padding: 5px;
-        font-size: 14px;
-        font-family: Arial;
-        border: 1px solid #ccc;
-        box-shadow: 0 2px 2px rgba(33, 33, 33, 0.4);
-        display: none;
-      }
+#control {
+  background: #fff;
+  padding: 5px;
+  font-size: 14px;
+  font-family: Arial;
+  border: 1px solid #ccc;
+  box-shadow: 0 2px 2px rgba(33, 33, 33, 0.4);
+  display: none;
+}
 
-      @media print {
-        #map-canvas {
-          height: 500px;
-          margin: 0;
-        }
+@media print {
+  #map-canvas {
+    height: 500px;
+    margin: 0;
+  }
 
-        #directions-panel {
-          float: none;
-          width: auto;
-        }
-      }
+  #directions-panel {
+    float: none;
+    width: auto;
+  }
+}
+
+
+/*  ################################################################
+  8. WHATS NEXT WHO KNOWS!
+################################################################# */
