--- a/app/views/access/home.html.erb
+++ b/app/views/access/home.html.erb
@@ -48,46 +48,8 @@
   </div>
 </div>
 
-<!-- FUN CAROSUEL -->
-<!-- <div class="picture" style="  padding-bottom: 30px;">
-<div class="container">
-    <div class="row  centered">
-      <div class="col-lg-6 col-lg-offset-3">
-        <h1>THIS APP IS FOR EVERYONE</h1>
-        <h3>YOU CAN DO AMAZING THINGS IN THIS AMAZING WORLD IF YOU JUST GIVE IT A TRY.</h3>
-      </div>
-    </div>
-  
-    <div class="row  centered" style="margin-top: 30px;">
-      <div class="col-lg-12">
-        <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-          
-          <ol class="carousel-indicators">
-            <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-            <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-            <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-          </ol>
-        
-          
-          <div class="carousel-inner">
-            <div class="item active">
-              <img src="https://farm8.staticflickr.com/7522/15629624809_0ef1f7d695_k.jpg" alt="" style="height:620px; width:1600px;">
-            </div>
-            <div class="item">
-              <img src="https://farm6.staticflickr.com/5615/15598273199_fc4f4ff9bf_o.jpg" alt="" style="height:620px;  width:1600px;">
-            </div>
-            <div class="item">
-              <img src="https://farm8.staticflickr.com/7489/15816591882_a31f567811_h.jpg" alt="" style="height:620px;  width:1600px;">
-            </div>
-          </div>
-        </div>      
-      </div>
-    </div>
-    <br>
-    <br>
-    <hr>
-  </div>
-</div> -->
+
+<!-- THOSE COOL TEXT BUBBLES -->
 
 <div id="home2">
     <div id="testimonials">
@@ -168,51 +130,37 @@
     </div>
 
 
-<!-- TEAMMMATES -->
+
+
+<!-- TEAMMMATES A.K.A (JUST ME!) -->
 <div class="team">
 <div class="container">
     <div class="row  centered">
       <div class="col-lg-6 col-lg-offset-3">
-        <h1>Our Awesome Team.<br/>Developers EXTRAORDINAIRE.</h1>
-        <h3>Except Switch he's the worst.</h3>
+        <h1>The Creater<br/>Hopeful Developer</h1>
+        <h3>THAT'S ME!</h3>
       </div>
     </div><!-- /row -->
     
-    <div class="row  centered" style="margin-top: 30px;">
-      <div class="col-lg-3">
-        <img class="img-circle" src="https://media.licdn.com/media/p/3/000/1e8/0c3/15fa8f7.jpg" width="140" height="150px" alt="">
-        <h4>Switch Thomas</h4>
-        <p>The absolute worst</p>
-      </div><!--/col-lg-3 -->
-
-      <div class="col-lg-3">
+    <div class="row  centered" style="margin-top: 30px;">      
+      <div class="col-lg-6 col-lg-offset-3">
         <img class="img-circle" src="https://media.licdn.com/media/p/6/005/09a/2a5/347fb36.jpg" width="140" height="150px" alt="">
         <h4>Ryan Shim</h4>
-        <p>the best</p>
-      </div><!--/col-lg-3 -->
-
-      <div class="col-lg-3">
-        <img class="img-circle" src="https://s3.amazonaws.com/uploads.hipchat.com/39979/1240693/sdCiAECOveO0WJ5/upload.png" width="140" height="150px" alt="">
-        <h4>Rajeev Dhar</h4>
-        <p>The best</p>
-      </div><!--/col-lg-3 -->
-
-      <div class="col-lg-3">
-        <img class="img-circle" src="https://media.licdn.com/media/p/2/000/1ed/1da/01f3895.jpg" width="140" height="150px" alt="">
-        <h4>Calvin Jhunjhnuwala</h4>
-        <p>the best</p>
-      </div><!--/col-lg-3 -->
+        <p><a target="_blank" href="https://www.facebook.com/ryan.shim.7"><i class="glyphicon glyphicon-globe"></i></a><a target="_blank" href="https://www.linkedin.com/in/ryanshim24"> <i class="glyphicon glyphicon-phone"></i></a><a href="mailto:ryanshim92@gmail.com"><i class="glyphicon glyphicon-send"></i></a>
+      </div><!--/col-lg-3 -->    
     </div><!-- /row -->
     <hr>
   </div><!-- /container -->
 </div>
 
 
+
+<!-- MY FOOTER! -->
 <div class="footer">
   <div class="container">
     <div class="row centered">
       <div class="col-lg-6 col-lg-offset-6">
-        <p>Created by the most awesome team.. The Dream Team</p>
+        <p>Created by the most lonesome awesome one man team.. The Lonesome Man</p>
       </div>
     </div>
   </div>
